# sls-bevy-game

./: Cargo.toml  Readme.md
.cargo/: config.toml
crates/sls-bevy-game/: Cargo.toml
crates/sls-bevy-game/src/: infinite_scroll_game.rs  lib.rs
crates/sls-bevy-game/src/components/: mod.rs
crates/sls-bevy-game/src/plugins/: mod.rs
crates/sls-bevy-game/src/systems/: camera_systems.rs  mod.rs  setup.rs
