[package]
name = "sls-bevy-game"
version = "0.1.0"
edition = "2018"
[[bin]]
name="sls-bevy-game"
test=false
bench=false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4.14"
env_logger = "0.9.0"
bevy = "0.6"
bevy-inspector-egui = "0.9.0"